--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,23 +20,23 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sunny Land Collection Files/Packs/", "res://Sunny Land Collection Files/Packs/Sunnyland/", "res://Sunny Land Collection Files/Packs/Sunnyland/spritesheets/", "res://Player/", "res://Global/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://world.tscn", "res://Player/Player.tscn", "res://Frog.tscn")
+current_scene="res://world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main.gd"]
+open_scripts=["res://Frog.gd", "res://Global/Game.gd", "res://main.gd", "res://Player/Player.gd", "res://Global/Utils.gd"]
 selected_script="res://main.gd"
 open_help=[]
 script_split_offset=70
