--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://world.tscn", "res://Player/Player.tscn", "res://Frog.tscn")
-current_scene="res://world.tscn"
+current_scene="res://Frog.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Frog.gd", "res://Global/Game.gd", "res://main.gd", "res://Player/Player.gd", "res://Global/Utils.gd"]
-selected_script="res://main.gd"
+selected_script="res://Global/Utils.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
